Closed Bug 1234553 Opened 9 years ago Closed 8 years ago

Distorted sound in Facebook videos

Categories

(Core :: Audio/Video, defect)

43 Branch
All
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla46
Tracking Status
firefox43 --- affected
firefox44 --- verified
firefox45 --- verified
firefox46 --- verified
b2g-v2.5 --- fixed

People

(Reporter: pauly, Assigned: jya)

References

Details

(Keywords: regression)

Attachments

(4 files)

FF 43.0.2, Ubuntu 13.04 x86

STR:
1. Open https://www.facebook.com/DCompeticion/videos/980618211995705/
2. Listen

Actual results:
Sound is distorted

Expected results:
Sound should not be distorted.
Reproduces also on 46.0a1 (2015-12-22).
Doesn't reproduce on FF 42, ESR 38.5.2.
I reproduced the problem on 3 machines with Ubuntu 12.04 x86, Ubuntu 13.04 x86, Ubuntu 14.04 x64 - FF 43.0.2.
But couldn't reproduce on another Ubuntu 14.04 x86 machine - FF 43.0.2.
So, this is probably a hardware specific issue.
Keywords: regression
Attached audio distorted sound.ogg
Please post the output of about:support and what version of ffmpeg you have installed. thank you
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard) → needinfo?(paul.silaghi)
Attached file about:support.txt
FFmpeg wasn't install.
The issue is still repro after install:
ffmpeg version 0.8.17-4:0.8.17-0ubuntu0.12.04.1
Flags: needinfo?(paul.silaghi)
can't reproduce on 15.10 (64 bits) with neither 43 nor nightly (ffmpeg 2.7.2)
can't reproduce on 14.04 (64 bits) with neither 43 nor nightly (LibAV 9.18)
can reproduce in 12.04 (64 bits) with 43 with LibAV 8

Did you restart firefox after installing ffmpeg? otherwise you would be using gstreamer.
what gstreamer do you have installed and what plugins?
LibAV 0.8 produces rubbish floating point data. We had restricted LibAV 0.8 to produce 16 bits audio instead, unfortunately some ubuntu version appears to have bumped the minor version.
Attachment #8701663 - Flags: review?(ajones)
Attachment #8701663 - Flags: review?(ajones) → review+
Comment on attachment 8701663 [details] [diff] [review]
Always request 16 bits audio for libavcodec 53.

Approval Request Comment
[Feature/regressing bug #]: 1234553
[User impact if declined]: Old distribution of linux shipping with LibAV 0.8 will play HE-AAC with bad audio. The effect is relatively dramatic. Even at the lowest value, if you're wearing a headset: it will cause physical pain (my ear are still ringing from listening to it for 1s over 30 minutes ago) and would likely damage the speakers
[Describe test coverage new/current, TreeHerder]: local test
[Risks and why]: None, we were already forcing a particular audio mode for this version of libav. Unfortunately, libav changed the minor version along the way bypassing our existing workaround.
[String/UUID change made/needed]: None

Seems this deserve a +.1 version... but I leave that up to you. We do not know how many installations are using that version of LibAV
Attachment #8701663 - Flags: approval-mozilla-release?
Attachment #8701663 - Flags: approval-mozilla-beta?
Attachment #8701663 - Flags: approval-mozilla-aurora?
This only affects Ubuntu 12.04 and HE-AAC. It does not affect YouTube because it doesn't use HE-AAC.
(In reply to Jean-Yves Avenard [:jya] from comment #7)
> Did you restart firefox after installing ffmpeg?
Yes
> what gstreamer do you have installed and what plugins?
GStreamer extra plugins - gstreamer0.10-plugins-ugly 0.10.19-2
and
GStreamer ffmpeg video plugin - gstreamer0.10-ffmpeg 0.10.13-5
So you had bad audio without ffmpeg installed and just gstreamer? Weird. But there's nothing we can do there.
https://hg.mozilla.org/mozilla-central/rev/8b8e2290d460
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Paul, could you please verify this issue is fixed as expected on a latest version of Nightly? Thanks!
Flags: needinfo?(paul.silaghi)
Comment on attachment 8701663 [details] [diff] [review]
Always request 16 bits audio for libavcodec 53.

While this impacts only Ubuntu users, the issue is critical enough to fix in Beta44, Aurora45.
Attachment #8701663 - Flags: approval-mozilla-beta?
Attachment #8701663 - Flags: approval-mozilla-beta+
Attachment #8701663 - Flags: approval-mozilla-aurora?
Attachment #8701663 - Flags: approval-mozilla-aurora+
I'm hitting conflicts uplifting this to beta. Can we get a rebased patch for it?
Flags: needinfo?(jyavenard)
Attached patch patch for betaSplinter Review
Flags: needinfo?(jyavenard)
(In reply to Jean-Yves Avenard [:jya] from comment #20)
> remote:   https://hg.mozilla.org/releases/mozilla-beta/rev/44eb237f155a

setting flags
Comment on attachment 8701663 [details] [diff] [review]
Always request 16 bits audio for libavcodec 53.

Too late for 43.
Attachment #8701663 - Flags: approval-mozilla-release? → approval-mozilla-release-
Flags: qe-verify+
QA Contact: paul.silaghi
(In reply to Ritu Kothari (:ritu) from comment #15)
> Paul, could you please verify this issue is fixed as expected on a latest
> version of Nightly? Thanks!
Verified fixed 46.0a1 (2016-01-03), 45.0a2 (2016-01-04) Ubuntu 12.04, Ubuntu 13.04.
Status: RESOLVED → VERIFIED
Flags: needinfo?(paul.silaghi)
Also verified fixed in FF 44b6, Ubuntu 13.04.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: