Bug 1234553: Always request 16 bits audio for libavcodec 53. r=kentuckyfriedtakahe

LibAV 0.8 produces rubbish floating point data. We had restricted LibAV 0.8 to produce 16 bits audio instead, unfortunately some ubuntu version appears to have bumped the minor version.